--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.158.2",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "react-type-animation": "^3.2.0",
     "three": "^0.158.0",
     "web-vitals": "^2.1.4"
   },
