--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bunny-alchemist",
+  "homepage": "https://peiwenhuang.github.io/bunny-alchemist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -52,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.0",
     "sass": "^1.69.5"
   }
 }
